<resources>
    <string name="app_name">AAudio Echo</string>
    <string name="status_title">Status:</string>
    <string name="action_settings">Settings</string>
    <string name="start_echo">Start</string>
    <string name="stop_echo">Stop</string>
    <string name="need_record_audio_permission">"This sample needs RECORD_AUDIO permission"</string>
    <string name="status_echoing">Engine Echoing ....</string>
    <string name="status_record_audio_denied">Error: Permission for RECORD_AUDIO was denied</string>
    <string name="status_touch_to_begin">RECORD_AUDIO permission granted, touch START to begin</string>
    <string name="status_warning">Warning: If you run this sample using the built-in microphone
        and speaker you may create a feedback loop which will not be pleasant to listen to.</string>
    <string name="recording_device">Recording device</string>
    <string name="playback_device">Playback device</string>
</resources>
